2001-10-05  Akim Demaille  <akim@epita.fr>

	* Makefile.am, config/Makefile.am, lib/emacs/Makefile.am,
	* m4/Makefile.am, man/Makefile.am: Add/adjust MAINTAINERCLEANFILES.

2001-10-05  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sh.m4 (_AS_LINENO_PREPARE): New, extracted from...
	(AS_SHELL_SANITIZE): here.  Use it.
	(_AS_LINENO_PREPARE): Preserve the exit status of $0.lineno.
	From Paul Eggert.

2001-10-04  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sh.m4 (AS_SHELL_SANITIZE): Use a portable
	combination of Awk and sed to replace $LINENO.

2001-10-02  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi (Limitations of Builtins): You can't use
	"source"; it's not portable.  Remove confusing and
	somewhat-incorrect example involving "." and "/".

	* lib/m4sugar/m4sh.m4 (AS_SHELL_SANITIZE): "source" -> ".", for
	compatibility with POSIX shells.

2001-10-02  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sh.m4 (AS_SHELL_SANITIZE): Just source 40.lineno
	instead of exec'ing to preserve $0 and $@.

2001-10-01  Akim Demaille  <akim@epita.fr>

	* tests/testsuite (AT_INIT) <at_pass_list>: New.
	Don't run twice the same test.

2001-10-01  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT) <--help>: Catch up with reality.
	No longer output the list of tests.
	<--list>: New option.
	<--full-help>: Remove.
	Complete the short/long options duality.
	Various small adjustments.

2001-10-01  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi: Use @kbd for user input.
	Always use `$' as shell prompt.

2001-09-30  Paul Eggert  <eggert@twinsun.com>

	* lib/autoconf/status.m4 (AC_OUTPUT_MAKE_DEFS):
	Don't use nested parenthesization.  This patch was originally
	suggested to bug-autoconf by Philippe De Muyter on 2000-05-28,
	but somehow it didn't get incorporated then.
	* doc/autoconf.texi (Limitations of Usual Tools):
	Clarify remark about sed and nested parenthesization.

	* lib/autoconf/types.m4 (AC_CHECK_SIZEOF):